--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.0",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "lowdb": "^6.0.1",
